--- a/static/index.html
+++ b/static/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Support Bot</title>
+  <title>Tactical Support Assistant</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <!-- Markdown parser -->
+  <script src="https://cdn.jsdelivr.net/npm/marked@9.1.6/marked.min.js"></script>
 </head>
 
 <body>
@@ -16,7 +18,7 @@
     <!-- Header -->
     <header class="header">
       <div class="header-content">
-        <h1 class="app-title">Support Bot</h1>
+        <h1 class="app-title">Tactical Support Assistant</h1>
         <div class="status-indicator" id="statusIndicator">
           <span class="status-dot"></span>
           <span class="status-text">Connecting...</span>
@@ -30,13 +32,15 @@
         <div class="message bot-message">
           <div class="message-avatar">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2ZM21 9V7L15 1H5C3.89 1 3 1.89 3 3V21C3 22.11 3.89 23 5 23H19C20.11 23 21 22.11 21 21V9M19 9H14V4L19 9Z"
+              <path d="M12 2L13.09 8.26L20 9L13.09 9.74L12 16L10.91 9.74L4 9L10.91 8.26L12 2Z" fill="currentColor" />
+              <path d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2Z"
+                fill="currentColor" />
+              <path d="M12 8C15.31 8 18 10.69 18 14C18 17.31 15.31 20 12 20C8.69 20 6 17.31 6 14C6 10.69 8.69 8 12 8Z"
                 fill="currentColor" />
             </svg>
           </div>
           <div class="message-content">
-            <p>Hello! I'm your support assistant. How can I help you today?</p>
+            <p>Hello! I'm your tactical support assistant. How can I help you today?</p>
           </div>
         </div>
       </div>
@@ -46,8 +50,10 @@
         <div class="message bot-message">
           <div class="message-avatar">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2ZM21 9V7L15 1H5C3.89 1 3 1.89 3 3V21C3 22.11 3.89 23 5 23H19C20.11 23 21 22.11 21 21V9M19 9H14V4L19 9Z"
+              <path d="M12 2L13.09 8.26L20 9L13.09 9.74L12 16L10.91 9.74L4 9L10.91 8.26L12 2Z" fill="currentColor" />
+              <path d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2Z"
+                fill="currentColor" />
+              <path d="M12 8C15.31 8 18 10.69 18 14C18 17.31 15.31 20 12 20C8.69 20 6 17.31 6 14C6 10.69 8.69 8 12 8Z"
                 fill="currentColor" />
             </svg>
           </div>
@@ -65,7 +71,7 @@
     <!-- Input Area -->
     <footer class="input-area">
       <div class="input-container">
-        <textarea id="messageInput" placeholder="Type your message here..." rows="1" maxlength="1000"></textarea>
+        <textarea id="messageInput" placeholder="Enter your tactical inquiry..." rows="1" maxlength="1000"></textarea>
         <button id="sendButton" class="send-button" disabled>
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M2.01 21L23 12L2.01 3L2 10L17 12L2 14L2.01 21Z" fill="currentColor" />
@@ -74,7 +80,7 @@
       </div>
       <div class="input-footer">
         <span class="char-count" id="charCount">0/1000</span>
-        <button id="clearButton" class="clear-button">Clear Chat</button>
+        <button id="clearButton" class="clear-button">Clear Mission</button>
       </div>
     </footer>
   </div>
