Add support escalation feature to chat API
- Introduced a new endpoint `/api/chat/request-support` to handle support escalation requests, allowing users to send their conversation history and email to the support team.
- Implemented logic in the chat handler to detect customer dissatisfaction and prompt for support escalation.
- Updated Swagger documentation to include the new endpoint and its request/response models.
- Enhanced the chat response model to indicate if support escalation is requested.
- Added a modal in the frontend for users to input their email for support requests, with validation and error handling.
- Updated styles for the support email modal and input fields for better user experience.
- Included necessary SendGrid API configurations in the application settings for sending support emails.

--- a/static/index.html
+++ b/static/index.html
@@ -106,6 +106,25 @@
     </div>
   </div>
 
+  <!-- Support Email Modal -->
+  <div class="modal" id="supportEmailModal" style="display: none;">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3>Contact Support</h3>
+        <button class="modal-close" id="closeSupportModal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <p>We'll send this conversation to our support team. Please provide your email address:</p>
+        <input type="email" id="supportEmailInput" placeholder="your.email@example.com" class="email-input">
+        <p class="error-message" id="emailError" style="display: none; color: #ef4444; margin-top: 8px; font-size: 14px;"></p>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" id="sendSupportButton">Send to Support</button>
+        <button class="btn btn-secondary" id="cancelSupportButton">Cancel</button>
+      </div>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 
