--- a/static/index.html
+++ b/static/index.html
@@ -125,7 +125,8 @@
       <div class="modal-body">
         <p>We'll send this conversation to our support team. Please provide your email address:</p>
         <input type="email" id="supportEmailInput" placeholder="your.email@example.com" class="email-input">
-        <p class="error-message" id="emailError" style="display: none; color: #ef4444; margin-top: 8px; font-size: 14px;"></p>
+        <p class="error-message" id="emailError"
+          style="display: none; color: #ef4444; margin-top: 8px; font-size: 14px;"></p>
       </div>
       <div class="modal-footer">
         <button class="btn btn-primary" id="sendSupportButton">Send to Support</button>
