refactor: Rename "Tactical Support Assistant" to "AI Assistant" in documentation, UI, and tests.

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="theme-color" content="#2d4a2d">
-  <title>Tactical Support Assistant</title>
+  <title>AI Assistant</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
     <!-- Header -->
     <header class="header">
       <div class="header-content">
-        <h1 class="app-title">Tactical Support Assistant</h1>
+        <h1 class="app-title">AI Assistant</h1>
         <div class="header-controls" style="display: flex; align-items: center; gap: 1rem;">
           <div class="status-indicator" id="statusIndicator">
             <span class="status-dot"></span>
@@ -54,7 +54,7 @@
             </svg>
           </div>
           <div class="message-content">
-            <p>Hello! I'm your tactical support assistant. How can I help you today?</p>
+            <p>Hello! I'm your AI Assistant. How can I help you today?</p>
           </div>
         </div>
 
