--- a/static/index.html
+++ b/static/index.html
@@ -136,6 +136,7 @@
   </div>
 
   <script src="script.js"></script>
+  <!-- Google Analytics will be loaded dynamically by script.js if configured -->
 </body>
 
 </html>
